--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #JDBC properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mytodo?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/mytodo?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=mytodo
 spring.datasource.password=mytodo
 
@@ -10,4 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
+
+# Secret key for hashing algorithm
+jwt.secret=voibay
 
