--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.11",
     "@ng-bootstrap/ng-bootstrap": "^5.1.2",
     "bootstrap": "^4.3.1",
+    "bootstrap-icons": "^1.0.0-alpha",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
