update sql scripts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #JDBC properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mytodo?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=mytodo
-spring.datasource.password=mytodo
+spring.datasource.url=jdbc:mysql://localhost:3306/taskmanager?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=taskmanager
+spring.datasource.password=taskmanager
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
